--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dotenv: ^4.1.0
   moment_dart: ^0.17.4
   shared_preferences: ^2.1.0
+  flutter_xupdate: ^2.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
